--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "system-design",
   "version": "1.0.0",
   "description": "vue boiler plate with iView",
-  "author": "Philip Seo",
+  "author": "sammcheon",
   "license": "MIT",
   "keywords": [
     "Vue",
